Update and rename youtube.html to index.html

--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                Talking Tech and AI with Google CEO Sundar Pichai!
+                Crazy Tik Toks Taken Moments Before DISASTER
               </p>
               <p class="video-author">
-                Marques Brownlee
+                SSSniperWolf
               </p>
               <p class="video-stats">
-                3.4M views &#183; 6 months ago
+                12M views &#183; 1 year ago
               </p>
             </div>
           </div>
@@ -177,13 +177,13 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                Try Not To Laugh Challenge #9      
+                The Simplest Math Problem No One Can Solve - Collatz Conjecture
               </p>
               <p class="video-author">
-                Markiplier          
+                Veritasium          
               </p>
               <p class="video-stats">
-                19M views &#183; 4 years ago
+                18M views &#183; 4 months ago
               </p>
             </div>
           </div>
@@ -202,13 +202,13 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                Talking Tech and AI with Google CEO Sundar Pichai!
+                Kadane's Algorithm to Maximum Sum Subarray Problem
               </p>
               <p class="video-author">
-                Marques Brownlee
+                CS Dojo
               </p>
               <p class="video-stats">
-                3.4M views &#183; 6 months ago
+                519K views &#183; 5 years ago
               </p>
             </div>
           </div>
@@ -227,13 +227,13 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                Try Not To Laugh Challenge #9      
+                Anything You Can Fit In The Circle I’ll Pay For
               </p>
               <p class="video-author">
-                Markiplier          
+                MrBeast          
               </p>
               <p class="video-stats">
-                19M views &#183; 4 years ago
+                141M views &#183; 1 year ago 
               </p>
             </div>
           </div>
